handle entries with num type and formula during OOXML import, tdf#94626

Change-Id: I0d48120f2b128fb898c7cc55cc41ce52378851dc
Reviewed-on: https://gerrit.libreoffice.org/21820
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>